...
                tools:text="6.0.12.9" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/div_horizon_no_nomargin" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/licenseLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/listgroup_item"
            android:onClick="@{()->viewModel.onClickLicense()}">

...
                android:id="@+id/itemLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/license"
                android:textColor="@color/text_selector_01"
                android:textSize="@dimen/size01"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/licenseButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
...
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/div_horizon_no_nomargin" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tutorialLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/listgroup_item"
            android:onClick="@{()->viewModel.onClickTutorial()}">

...
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/div_horizon_no_nomargin" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/termsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/listgroup_item"
            android:onClick="@{()->viewModel.onClickTerms()}">

            <TextView
                android:id="@+id/itemTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:singleLine="true"
                android:text="@string/terms_of_use"
                android:textColor="@color/text_selector_01"
                android:textSize="@dimen/size01"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/termsButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
...
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/div_horizon_no_nomargin" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/privacyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/listgroup_item"
            android:onClick="@{()->viewModel.onClickPrivacy()}">

            <TextView
                android:id="@+id/itemPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:singleLine="true"
                android:text="@string/privacy_policy"
                android:textColor="@color/text_selector_01"
                android:textSize="@dimen/size01"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/privacyButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
...
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/div_horizon_no_nomargin" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noticeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/listgroup_item"
            android:onClick="@{()->viewModel.onClickNotice()}">

...
                android:id="@+id/itemNotice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:duplicateParentState="true"
                android:singleLine="true"
                android:text="@string/about_notice"
                android:textColor="@color/text_selector_01"
                android:textSize="@dimen/size01"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/newNoticeImageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="공지 사항" />

            <ImageView
...
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/div_horizon_no_nomargin" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/faqLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/listgroup_item"
            android:onClick="@{()->viewModel.onClickFaq()}">

            <TextView
                android:id="@+id/itemFaq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:duplicateParentState="true"
                android:singleLine="true"
                android:text="@string/string_faq"
                android:textColor="@color/text_selector_01"
                android:textSize="@dimen/size01"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/faqButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
...
