...
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialogue_group"
        android:orientation="vertical">

        <!--  사용제품  -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/productSelectLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/listgroup_item_top"
            android:clickable="true"
            android:padding="10dp"
            android:onClick="@{()->viewModel.toggleProductTypeExpand()}">
...
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--  Standard / Enterprise  -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/standardServerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="2dp"
...
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Standard / Enterprise 제품" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--  서버 제품  -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/customServerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
...
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connectURLTextView">

                <RadioButton
                    android:id="@+id/httpRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:button="@null"
                    app:buttonCompat="@null"
                    android:drawableLeft="@drawable/radio_selector"
...
                    android:text="@string/http"
                    android:textColor="@color/color02"
                    android:textSize="@dimen/size01"
                    android:onClick="@{()->viewModel.selectedHttp()}" />

                <RadioButton
                    android:id="@+id/httpsRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:button="@null"
                    app:buttonCompat="@null"
                    android:checked="@{viewModel.isHttpsServer()}"
...
                    android:textColor="@color/color02"
                    android:textSize="@dimen/size01" />
            </RadioGroup>


            <EditText
                android:id="@+id/serverURLEditText"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/edittext_height_32"
                android:layout_marginTop="7dp"
                android:background="@drawable/input_background"
                android:inputType="text|textNoSuggestions"
                android:maxLines="1"
...
                android:duplicateParentState="true"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/proxyuse"
                android:textColor="@color/text_selector_01"
                android:textSize="@dimen/size01"
                app:layout_constraintBottom_toBottomOf="@+id/proxyToggleButton"
                app:layout_constraintEnd_toStartOf="@+id/proxyToggleButton"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/proxyToggleButton"
                tools:text="프록시 사용" />

...
                android:visibility="@{viewModel.isUseProxy() ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/proxyToggleButton"
                tools:text="서버" />

            <EditText
                android:id="@+id/proxyAddrEditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittext_height_32"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_background"
                android:inputType="text|textNoSuggestions"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/proxyAddrEditText"
                tools:text="포트" />


            <EditText
                android:id="@+id/proxyPortEditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittext_height_32"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_background"
                android:inputType="text|textNoSuggestions"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/proxyPortEditText"
                tools:text="사용자 이름" />


            <EditText
                android:id="@+id/proxyUserEditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittext_height_32"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_background"
                android:inputType="text|textNoSuggestions"
...
                android:visibility="@{viewModel.isUseProxy() ? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/proxyUserEditText"
                tools:text="암호" />

            <EditText
                android:id="@+id/proxyPwdEditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/edittext_height_32"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_background"
                android:inputType="text|textNoSuggestions"
...
