...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialogue_group"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/feedBackLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/listgroup_item"
            android:onClick="@{()->viewModel.onClickFeedBack()}">

...
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/div_horizon_no_nomargin" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/goWebSiteLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/listgroup_item"
            android:onClick="@{()->viewModel.onClickGoWebSite()}">

...
